Fase 1 comleta, corrigiendo detalles de diseño en fase 2

--- a/JC_1_5/JC_1_5.csproj
+++ b/JC_1_5/JC_1_5.csproj
@@ -211,6 +211,8 @@
     <Content Include="Assets\Infografia\QUE_ES_JC_1.png" />
     <Content Include="Assets\Infografia\QUE_ES_JC_2.png" />
     <Content Include="Assets\Infografia\QUE_ES_JC_3.png" />
+    <Content Include="Assets\Infografia\QUE_ES_JC_4.png" />
+    <Content Include="Assets\Infografia\QUE_ES_JC_5.png" />
     <Content Include="Assets\NattanFonts\Roboto_Slab\RobotoSlab-Bold.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
