--- a/JC_1_5/JC_1_5.csproj
+++ b/JC_1_5/JC_1_5.csproj
@@ -339,6 +339,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\CIDE_CotiApp\packages\Newtonsoft.Json.6.0.8\lib\portable-net40+sl5+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Sparrow.Chart.WP8.45">
+      <HintPath>..\..\..\visual studio 2012\Projects\slnJusticiaCotidiana\packages\Sparrow.Chart.WP8.13.1.0.113\lib\windowsphone8\Sparrow.Chart.WP8.45.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http">
       <HintPath>..\..\CIDE_CotiApp\packages\Microsoft.Net.Http.2.2.28\lib\sl4-windowsphone71\System.Net.Http.dll</HintPath>
     </Reference>
