--- a/JC_1_5/packages.config
+++ b/JC_1_5/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="amChartsQuickCharts" version="1.1" targetFramework="wp80" />
   <package id="Facebook" version="6.4.2" targetFramework="wp80" />
   <package id="Facebook.Client" version="0.9.1-alpha" targetFramework="wp80" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="wp80" />
